--- a/requirements.txt
+++ b/requirements.txt
@@ -9,9 +9,11 @@ Django==4.2.8
 django-allauth==0.59.0
 django-cors-headers==4.3.1
 djangorestframework==3.14.0
+gunicorn==22.0.0
 idna==3.4
 numpy==1.26.4
 oauthlib==3.2.2
+packaging==24.0
 pycparser==2.21
 PyJWT==2.8.0
 python3-openid==3.2.0
